--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- PERMISOS -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,14 +29,9 @@
         <activity android:name=".Register.RegisterPaso4Activity"/>
         <activity android:name=".Login.LoginActivity"/>
         <activity android:name=".Menu.menuActivity"/>
-        <activity android:name=".CasosdeUso.registrarNuevaMascotaActivity" />
-        <activity android:name=".CasosdeUso.monitoreoTiempoRealActivity" />
-        <activity android:name=".CasosdeUso.historialUbicacionActivity" />
         <activity android:name=".CasosdeUso.zonaSeguraActivity" />
-        <activity android:name=".CasosdeUso.reporteActividadActivity" />
-        <activity android:name=".CasosdeUso.buscarVeterinariasActivity" />
-        <activity android:name=".CasosdeUso.registrarVacunasActivity" />
-        <activity android:name=".CasosdeUso.monitoreoEjercicioActivity" />
+        <activity android:name=".CasosdeUso.MapaZonaSegura" />
+
 
         <activity
             android:name=".MainActivity"
