--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:usesCleartextTraffic="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,8 +25,8 @@
         android:theme="@style/Theme.PetMonitor"
         tools:targetApi="31">
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAMp_LEifcWuwwHbWa99j8IMUN6MjFj_SQ" />
+            android:name="com.google.firebase.firestore.FirebaseFirestore"
+            android:value="default" />
         <activity android:name=".Register.RegisterPaso1Activity"/>
         <activity android:name=".Register.RegisterPaso2Activity"/>
         <activity android:name=".Register.RegisterPaso3Activity"/>
