--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:theme="@style/Theme.PetMonitor"
         tools:targetApi="31">
         <activity
+            android:name=".CasosdeUso.monitoreoEjercicio2"
+            android:exported="false" />
+        <activity
             android:name=".CasosdeUso.resumenEjercicio"
             android:exported="false" />
         <activity
@@ -38,10 +41,12 @@
         <activity android:name=".Menu.menuActivity" />
         <activity android:name=".CasosdeUso.zonaSeguraActivity" />
         <activity android:name=".CasosdeUso.MapaZonaSegura" />
-
-        <activity android:name=".CasosdeUso.registrarVacunasActivity"  android:exported="false" />
-        <activity android:name=".vacuna.HistorialVacunasActivity" android:exported="false"/>
-
+        <activity
+            android:name=".CasosdeUso.registrarVacunasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vacuna.HistorialVacunasActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
