--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity
             android:name=".vacuna.HistorialVacunasActivity"
             android:exported="false" />
+        <activity android:name=".MisMascotas" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
