Updating to search for nearby veterinaries

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity
             android:name=".CasosdeUso.historialUbicacionActivity"
             android:exported="false" />
+        <activity
+            android:name=".CasosdeUso.VeterinariosActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
