Design and modifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,13 +54,15 @@
             android:name=".CasosdeUso.RegistrarVacunaActivity"
             android:exported="false" />
 
-        <activity android:name=".MisMascotas" />
+        <activity
+            android:name=".MisMascotas"
+            android:exported="false"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
