--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,7 @@
         <activity
             android:name=".Tests.ReporteActividadTester"
             android:exported="false" />
-        <activity
-            android:name=".Tests.TesterMonitoreoActivity"
-            android:exported="false" />
+
         <activity
             android:name=".CasosdeUso.reporteActividad"
             android:exported="false" />
@@ -72,7 +70,16 @@
             android:name=".Menu.MisMascotas"
             android:exported="false" />
         <activity
+            android:name=".Tests.TesterMonitoreoActivity"
+            android:exported="false"/>
+        <activity
             android:name=".MainActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".Tests.historialUbicacionTestActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".Tests.ubicacionTiempoRealTestActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -80,6 +87,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
