--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <!-- PERMISOS -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -63,6 +64,12 @@
         <activity android:name=".CasosdeUso.MapaZonaSegura" />
         <activity android:name=".CasosdeUso.VeterinariosActivity" />
         <activity android:name=".CasosdeUso.HistorialVacunasActivity" />
+        <activity android:name=".CasosdeUso.RegistrarTratamientoActivity" />
+        <activity android:name=".CasosdeUso.HistorialTratamientosActivity" />
+        <activity android:name=".CasosdeUso.HistorialCumplimientosActivity" />
+        <receiver android:name=".CasosdeUso.RecordatorioReceiver" />
+        <receiver android:name=".CasosdeUso.CumplimientoReceiver" />
+
         <activity
             android:name=".CasosdeUso.RegistrarVacunaActivity"
             android:exported="false" />
@@ -89,6 +96,10 @@
 
         <activity
             android:name=".Tests.RegistrarVacunaTestActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".Tests.RegistrarTratamientoTestActivity"
             android:exported="false"/>
 
         <activity
